<resources>
    <string name="app_name">Crop Disease Prediction</string>
    <string name="select">Select</string>
    <string name="predict">Predict</string>
    <string name="pridiction0">Disease: Bacterial Leaf Blight</string>
    <string name="cause0">
        Cause:
        The disease is most likely to develop in areas that have weeds and stubbles of infected plants. It can occur in both tropical and temperate environments, particularly in irrigated and rainfed lowland areas. In general, the disease favors temperatures at 25−34°C, with relative humidity above 70%.

It is commonly observed when strong winds and continuous heavy rains occur, allowing the disease-causing bacteria to easily spread through ooze droplets on lesions of infected plants.

Bacterial blight can be severe in susceptible rice varieties under high nitrogen fertilization.
    </string>
    <string name="prevention0">
        Prevention:
        Use balanced amounts of plant nutrients, especially nitrogen.
Ensure good drainage of fields (in conventionally flooded crops) and nurseries.
Keep fields clean. Remove weed hosts and plow under rice stubble, straw, rice ratoons and volunteer seedlings, which can serve as hosts of bacteria.
Allow fallow fields to dry in order to suppress disease agents in the soil and plant residues.
    </string>
    <string name="prediction1">Disease: Brown Spot</string>
    <string name="cause1">
        Cause:
        The disease can develop in areas with high relative humidity (86−100%) and temperature between 16 and 36°C. It is common in unflooded and nutrient-deficient soil, or in soils that accumulate toxic substances.

For infection to occur, the leaves must be wet for 8−24 hours.
        infected seed, which give rise to infected seedlings
volunteer rice
infected rice debris
weeds
    </string>
    <string name="prevention1">
        Prevention:
        monitor soil nutrients regularly
apply required fertilizers
for soils that are low in silicon, apply calcium silicate slag before planting
        Use resistant varieties. 
Contact your local agriculture office for up-to-date lists of varieties available.
Use fungicides (e.g., iprodione, propiconazole, azoxystrobin, trifloxystrobin, and carbendazim) as seed treatments.
Treat seeds with hot water (53−54°C) for 10−12 minutes before planting, to control primary infection at the seedling stage. To increase effectiveness of treatment, pre-soak seeds in cold water for eight hours.
    </string>
    <string name="prediction2">
        Disease: Leaf Smut
    </string>
    <string name="cause2">
        Cause:
        Infected grains contain spores of causal organism.

These grains are used as seeding material (mixed with disease free grains).

Disease spread to new plants.

Again, the harvested grains from new plants are mixed unknowingly with disease free grains and the cycle continues.

Another reason is falling of conidia in crop filed during crop harvest. This is the reason of ‘Why disease spreads in other fields’.
    </string>
    <string name="prevention2">
        Prevention:
        Don’t sow contaminated seeds: Contaminated seed contains the causal organism. Always sow disease free seed.
Try to treat the seeds before sowing: Seed can be treated before sowing. The chemical used in seed treatment is mercuric calories.
Carefully remove the affected grains from standing crop: Start this practice whenever you observe the symptoms. Keep care while removing.
Remove all the infected grains before harvesting: The affected grains should be removed first. It will help in clean harvesting.
Affected grains should not fall from the plants in field: The fallen balls cause the further expansion of the micro-organism through different vectors. It can be water or other insects.
Avoid mixing affected grains with disease free grains: Mixing of affected grains with disease free grains is a cause of failure of disease management.

    </string>
</resources>